--- a/client/score.html
+++ b/client/score.html
@@ -19,7 +19,18 @@
         place-content: center;
         font-size: 80vmin;
         color: #fff;
+        transition: background-color 0.3s ease-out;
         text-shadow: 0 0 5vmin #0008;
+      }
+
+      .green {
+        background-color: darkgreen;
+        transition: background-color 20ms ease-out;
+      }
+
+      .red {
+        background-color: darkred;
+        transition: background-color 20ms ease-out;
       }
     </style>
   </head>
@@ -30,7 +41,16 @@
       const team = location.pathname[1];
       const div = document.querySelector("main");
 
+      let timeout;
+      function flash(cls) {
+        div.classList.add(cls);
+        if (timeout) clearTimeout(timeout);
+        timeout = setTimeout(() => div.classList.remove(cls), 500);
+      }
+
       socket.on("score", (score) => {
+        if (score[team] > +div.innerHTML) flash("green");
+        if (score[team] < +div.innerHTML) flash("red");
         div.innerHTML = score[team];
       });
     </script>
