--- a/client/control.html
+++ b/client/control.html
@@ -46,6 +46,10 @@
           &:active {
             background-color: #fff4;
           }
+
+          &:empty {
+            background-color: darkred;
+          }
         }
       }
     </style>
@@ -56,16 +60,22 @@
       function send(team, d) {
         socket.emit("score", [team, d]);
       }
+
+      function err(team) {
+        socket.emit("err", team);
+      }
     </script>
     <section>
       Team A
       <div onclick="send('a',-1)">-1</div>
       <div onclick="send('a',+1)">+1</div>
+      <div onclick="err('a')"></div>
     </section>
     <section>
       Team B
       <div onclick="send('b',-1)">-1</div>
       <div onclick="send('b',+1)">+1</div>
+      <div onclick="err('b')"></div>
     </section>
   </body>
 </html>
